# Alpha---App

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
apps/agent/: __init__.py  cli.py  main.py  services.py
apps/agent/api/: __init__.py  command.py  status.py  websocket.py
apps/overlay/: package.json  tsconfig.json
apps/overlay/public/: electron.js  index.html  manifest.json  preload.js
apps/overlay/src/: App.css  App.tsx  index.tsx  react-app-env.d.ts
apps/overlay/src/components/: CommandInput.tsx  NotificationToast.tsx  StatusIndicator.tsx
apps/overlay/src/hooks/: useElectron.ts  useVoiceRecognition.ts
apps/overlay/src/types/: electron.d.ts
docs/: api.md  architecture.md  deployment.md
scripts/: dev.py  evaluate_model.py  setup.py  train_bc.py  train_ppo.py
tests/: conftest.py
tests/e2e/: test_mvp_scenarios.py
tests/unit/: test_common.py  test_nlu.py  test_planner.py
